Fonts and images

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bebas+Neue&family=Calistoga&family=Dancing+Script:wght@400..700&family=Inspiration&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <!-- link-f-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
@@ -110,17 +114,175 @@
 
 
 
-        <!-- section-2-start -->
-        <section class="section-2-main">
-            <div class="wrapper">
-                <div class="container">
-                    <div class="section-2-content">
-                        
+    <!-- section-2-start -->
+    <section class="section-2-main">
+        <div class="wrapper">
+            <div class="container">
+                <div class="section-2-content">
+                    <div class="sec-2-box1">
+                        <p class="sec-2-para1">Leading companies trust us <span class="sec-2-span1">to develop
+                                software</span></p>
+                        <p class="small">We <span class="sec-2-span2"> add development capacity </span>add development
+                            capacity to tech teams. Our value isn’t limited to building teams but
+                            is equally distributed across the project lifecycle. We are a custom software development
+                            company that guarantees the successful delivery of your project.</p>
+                        <a href="#">
+                            <h3>See more Informations</h3>
+                        </a>
+                        <a href="#"><i class="fa-solid fa-arrow-right-long"></i></a>
+                        <div class="sec-2-para-section">
+                        </div>
+                        <p class="sec-2-para2">Meet the People<span class="sec-2-span3"><br> We are Working
+                                With</span> </p>
+                    </div>
+                    <div class="sec-2-box2">
+                        <img src="./images/Abou-us-Video.png" alt="">
+                        <img src="./images/sec-2-arrow.png" alt="" class="sec-2-arrow">
+                        <div class="sec-2-circle">
+
+                        </div>
+
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
+    <!-- section-2-end -->
 
+
+
+
+    <!-- section-3-start -->
+    <section class="section-3-main">
+        <div class="wrapper">
+            <div class="section-3-content">
+                <img src="./images/Logo-1.png" alt="" class="sec-3-img-1">
+                <img src="./images/logo2.png" alt="" class="sec-3-img-2">
+                <img src="./images/logo-3.png" alt="" class="sec-3-img-3">
+                <img src="./images/Logo-4.png" alt="" class="sec-3-img-4">
+                <img src="./images/logo5.png" alt="" class="sec-3-img-5">
+                <img src="./images/Logo-6.png" alt="" class="sec-3-img-6">
+                <img src="./images/logo7.png" alt="" class="sec-3-img-7">
+            </div>
+        </div>
+    </section>
+    <!-- section-end -->
+
+
+
+
+
+    <!-- section-4-start -->
+    <section class="section-4-main">
+        <div class="wrapper">
+            <div class="container">
+                <div class="section-4-content">
+                    <div class="sec-4-box1">
+                        <hr class="sec-4-hr">
+                        <div class="sec-4-heading">
+                            <p class="sec-4-heading-para">Why cutomers love</p>
+                            <h3>working with us</h3>
+                            <p class="sec-4-para">Without any doubt I recommend Alcaline Solutions as one of the best
+                                web design and
+                                digital marketing agencies. One of the best agencies I’ve came across so far. Wouldn’t
+                                be hesitated to introduce their work to someone else.</p>
+                        </div>
+                        <div class="sec-4-arrows">
+                            <i class="fa-regular fa-circle-left"></i>
+                        <i class="fa-regular fa-circle-right"></i>
+                        </div>
+                        <div class="reviews-main">
+                            <div class="sec-4-reviews1">
+                                <img src="./images/sec-4-img4.png" alt="">
+                                <div class="stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+                                <h5>Romeena De Silva</h5>
+                                <p>Janet Cosmetics</p>
+                            </div>
+
+                            <div class="sec-4-reviews1">
+                                <img src="./images/sec-4-img5.png" alt="">
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                                <h5>Romeena De Silva</h5>
+                                <p>Janet Cosmetics</p>
+                            </div>
+
+                            <div class="sec-4-reviews1">
+                                <img src="./images/sec-4-img1.png" alt="">
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                                <h5>Romeena De Silva</h5>
+                                <p>Janet Cosmetics</p>
+                            </div>
+
+                            <div class="sec-4-reviews1">
+                                <img src="./images/sec-4-img2.png" alt="">
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                                <h5>Romeena De Silva</h5>
+                                <p>Janet Cosmetics</p>
+                            </div>
+
+                            <div class="sec-4-reviews1">
+                                <img src="./images/sec-4-img3.png" alt="">
+                                <div class="stars">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                </div>
+                                <h5>Romeena De Silva</h5>
+                                <p>Janet Cosmetics</p>
+                            </div>
+                        </div>
+                        <div class="arrowsups">
+                        <img src="./images/Deco-img-arrow-up.png" alt="" class="sec-4-arrow-up">
+                        <img src="./images/Deco-img-arrow-down.png" alt="" class="sec-4-arrow-down">
+                    </div>
+                    </div>
+                  
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- section-4-end -->
+
+
+
+
+
+    <!-- section-5-start -->
+    <section class="section-5-main">
+        <div class="wrapper">
+            <div class="container">
+                <div class="section-5-content">
+
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
